# BackendChatAplocation/storage/api-docs/api-docs.json
@@ -1,270 +1,57 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "API Documentation",
-        "description": "API Documentation for User management",
+        "title": "Mi API",
+        "description": "Documentación de la API de usuarios",
         "version": "1.0.0"
     },
     "paths": {
-        "/api/messages": {
-            "get": {
-                "summary": "Get all messages",
-                "operationId": "9d5effa2cb648df85be0ea9741ffb457",
-                "responses": {
-                    "200": {
-                        "description": "A list of messages"
-                    }
-                }
-            },
-            "post": {
-                "summary": "Create a new message",
-                "operationId": "db79bb7bcadfdb708e9f6c38ac928f4a",
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "sender_id",
-                                    "receiver_id",
-                                    "content"
-                                ],
-                                "properties": {
-                                    "sender_id": {
-                                        "type": "integer",
-                                        "example": 1
-                                    },
-                                    "receiver_id": {
-                                        "type": "integer",
-                                        "example": 2
-                                    },
-                                    "content": {
-                                        "type": "string",
-                                        "example": "Hello!"
-                                    },
-                                    "images": {
-                                        "type": "array",
-                                        "items": {
-                                            "type": "string",
-                                            "format": "binary"
-                                        }
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "201": {
-                        "description": "Message created successfully"
-                    },
-                    "400": {
-                        "description": "Invalid input"
-                    }
-                }
-            }
-        },
-        "/api/messages/{message}": {
-            "get": {
-                "summary": "Get a specific message",
-                "operationId": "ea436d0f505d6db4c671b69816371366",
-                "parameters": [
-                    {
-                        "name": "message",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Message details"
-                    },
-                    "404": {
-                        "description": "Message not found"
-                    }
-                }
-            },
-            "put": {
-                "summary": "Update a specific message",
-                "operationId": "462bb6ee7444625558ff6a67abd567c6",
-                "parameters": [
-                    {
-                        "name": "message",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "properties": {
-                                    "content": {
-                                        "type": "string",
-                                        "example": "Updated content"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Message updated successfully"
-                    },
-                    "400": {
-                        "description": "Invalid input"
-                    },
-                    "404": {
-                        "description": "Message not found"
-                    }
-                }
-            },
-            "delete": {
-                "summary": "Delete a specific message",
-                "operationId": "d7d86b5236d9d8ecd29399f1984ac4fd",
-                "parameters": [
-                    {
-                        "name": "message",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Message deleted successfully"
-                    },
-                    "404": {
-                        "description": "Message not found"
-                    }
-                }
-            }
-        },
-        "/api/messages/between/{userId1}/{userId2}": {
-            "get": {
-                "summary": "Get messages between two users",
-                "operationId": "0b00ec5a3d5ce3badd735e0084824881",
-                "parameters": [
-                    {
-                        "name": "userId1",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    {
-                        "name": "userId2",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "A list of messages between two users"
-                    }
-                }
-            }
-        },
-        "/api/messages/senders/{userId}": {
-            "get": {
-                "summary": "Get senders for a user",
-                "operationId": "3a81c4194e4ca4200906b8e55e4f4895",
-                "parameters": [
-                    {
-                        "name": "userId",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "A list of senders"
-                    },
-                    "404": {
-                        "description": "No senders found"
-                    }
-                }
-            }
-        },
         "/api/users": {
             "get": {
                 "tags": [
-                    "Users"
+                    "Usuarios"
                 ],
-                "summary": "Get list of users",
-                "description": "Returns list of users",
-                "operationId": "getUsersList",
+                "summary": "Mostrar lista de usuarios",
+                "operationId": "c457726701591d1183b53aa71fc13441",
                 "responses": {
                     "200": {
-                        "description": "Successful operation",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/components/schemas/User"
-                                    }
-                                }
-                            }
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
+                        "description": "Lista de usuarios"
                     }
                 }
             },
             "post": {
                 "tags": [
-                    "Users"
+                    "Usuarios"
                 ],
-                "summary": "Store a new user",
-                "description": "Creates a new user",
-                "operationId": "storeUser",
+                "summary": "Crear un nuevo usuario",
+                "operationId": "592819a0265360b2014512d6dbfaf0e7",
                 "requestBody": {
                     "required": true,
                     "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/components/schemas/User"
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "John Doe"
+                                    },
+                                    "email": {
+                                        "type": "string",
+                                        "example": "john@example.com"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "example": "password"
+                                    }
+                                },
+                                "type": "object"
                             }
                         }
                     }
                 },
                 "responses": {
                     "201": {
-                        "description": "Successful operation",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/User"
-                                }
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad request"
+                        "description": "Usuario creado"
                     }
                 }
             }
@@ -272,11 +59,10 @@
         "/api/users/{id}": {
             "get": {
                 "tags": [
-                    "Users"
+                    "Usuarios"
                 ],
-                "summary": "Get user information",
-                "description": "Returns a user by ID",
-                "operationId": "getUserById",
+                "summary": "Mostrar un usuario específico",
+                "operationId": "36a33ff774d5cba33c039dec2c3e0287",
                 "parameters": [
                     {
                         "name": "id",
@@ -289,27 +75,16 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Successful operation",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/User"
-                                }
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "User not found"
+                        "description": "Usuario específico"
                     }
                 }
             },
             "put": {
                 "tags": [
-                    "Users"
+                    "Usuarios"
                 ],
-                "summary": "Update an existing user",
-                "description": "Updates a user by ID",
-                "operationId": "updateUser",
+                "summary": "Actualizar un usuario",
+                "operationId": "b9091397c8b25f12c6adb74be6ce3a5a",
                 "parameters": [
                     {
                         "name": "id",
@@ -325,37 +100,37 @@
                     "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/components/schemas/User"
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "John Doe"
+                                    },
+                                    "email": {
+                                        "type": "string",
+                                        "example": "john@example.com"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "example": "password"
+                                    }
+                                },
+                                "type": "object"
                             }
                         }
                     }
                 },
                 "responses": {
                     "200": {
-                        "description": "Successful operation",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/User"
-                                }
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad request"
-                    },
-                    "404": {
-                        "description": "User not found"
+                        "description": "Usuario actualizado"
                     }
                 }
             },
             "delete": {
                 "tags": [
-                    "Users"
+                    "Usuarios"
                 ],
-                "summary": "Delete a user",
-                "description": "Deletes a user by ID",
-                "operationId": "deleteUser",
+                "summary": "Eliminar un usuario",
+                "operationId": "fa56cffde745d3f152f95cbacd936c0b",
                 "parameters": [
                     {
                         "name": "id",
@@ -368,18 +143,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Successful operation",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "string"
-                                },
-                                "example": "usuario eliminado"
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "User not found"
+                        "description": "Usuario eliminado"
                     }
                 }
             }
@@ -417,5 +181,11 @@
                 "type": "object"
             }
         }
-    }
+    },
+    "tags": [
+        {
+            "name": "Usuarios",
+            "description": "Operaciones sobre usuarios"
+        }
+    ]
 }
